<resources>
    <string name="app_name">TrackingApp</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time.</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose color of track.</string>
</resources>